# EmergencyTeleoperatedRobotSystem-Jetson

./: .gitignore  CMakeLists.txt  README.md  default.conf
include/: AzureKinect.h  AzureKinectExtrinsics.h  Bluetooth.h  Bot.h  Device.h  Network.h  ObjectDetection.h  PointCloud.h  Recoder.h  Serial.h  SoundSourceLocalization.h  Utility.h  WebSocket.h
include/geometry/: Geometry.h  Mesh.h  PointCloud.h  Transformation.h
include/python_invoker/: PythonInvoker.h  TypeConverters.h  Types.h
include/utility/: Config.h  Debug.h  MacAddress.h  MathUtils.h  Timer.h  Transformation.h  Utility.h
pcd_utility/: bin_to_pcd.py  down_sample_point_cloud.py  pcd_to_bin.py  ply_to_pcd.py
protobuf/: BotArm.proto  DataMessage.proto  DetectionResult.proto  KinectMode.proto  Mesh.proto  ObjectDetection.proto  PointCloud.proto  protoc_and_mv.sh
src/: AzureKinect.cpp  AzureKinectExtrinsics.cpp  Bluetooth.cpp  Boostt.cpp  Bot.cpp  Compete.cpp  Device.cpp  EmergencyTeleoperatedRobotSystem.cpp  Network.cpp  ObjectDetection.cpp  PointCloud.cpp  Recon.cpp  Reconstruction.cpp  Rotate.cpp  Serial.cpp  SoundSourceLocalization.cpp  Utility.cpp  Zhaoxin.cpp  print.cpp
src/geometry/: Mesh.cpp  PointCloud.cpp  Transformation.cpp
src/object_detection/: MMDet3D.py  inference.py  network.py  object_detection.py
src/object_detection/configs/: train_pointpillars_sunrgbd.yml
src/object_detection/open3d_ml/: ObjectDetection_KITTI.py  ObjectDetection_SUNRGBD.py  SemanticSegmentation_SemanticKITTI.py  Train_ObjectDetection_S3DIS.py  Train_ObjectDetection_SunRGBD.py  Train_SemanticSegmentation_SemanticKITTI.py
src/object_detection/protobuf/: BotArm_pb2.py  BotArm_pb2.pyi  BotCar_pb2.py  BotCar_pb2.pyi  BotGripper_pb2.pyi  BotLed_pb2.py  BotLed_pb2.pyi  BotMotor_pb2.py  BotMotor_pb2.pyi  DataMessage_pb2.py  DataMessage_pb2.pyi  KinectMode_pb2.pyi  Mesh_pb2.py  Mesh_pb2.pyi  ObjectDetection_pb2.py  ObjectDetection_pb2.pyi  PointCloud_pb2.py  PointCloud_pb2.pyi  SoundSource_pb2.pyi  TempAndHumi_pb2.pyi
src/protobuf/: BotArm.proto  BotCar.proto  BotGripper.proto  BotLed.proto  BotMotor.proto  DataMessage.proto  KinectMode.proto  Mesh.proto  SoundSource.proto  TempAndHumi.proto  protoc_and_mv.sh
src/python/: MachineLearning.py  ObjectDetection_KITTI.py  ReadDataset.py  SemanticSegmentation.py  SemanticSegmentation_Custom_S3DIS.py  SemanticSegmentation_S3DIS.py  pcd_to_ply.py  prototest.py  rotate_point_cloud.py  sun_rgbd.py
src/python/configs/: votenet_8xb16_sunrgbd-3d.py.py
src/python/protobuf/: BotArm_pb2.py  BotGripper_pb2.py  DataMessage_pb2.py  KinectMode_pb2.py  Mesh_pb2.py  SoundSource_pb2.py  TempAndHumi_pb2.py
src/python_invoker/: PythonInvoker.cpp
src/ref/: CasGenerateColorPointCloud.cpp  CasGeneratePointCloud.cpp  ControlCar.cpp  Main.cpp
src/utility/: Config.cpp  Debug.cpp  MacAddress.cpp  MathUtils.cpp  Timer.cpp  Transformation.cpp  Utility.cpp
